unpackaged/main/default/objects/Onboarding_Location__c/Onboarding_Location__c.object-meta.xml
<CustomObject>
    <label>Onboarding Location</label>
    <nameField>
        <displayFormat>OBLM-{00000000}</displayFormat>
        <label>Onboarding Location Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>