unpackaged/main/default/objects/Onboarding_Location__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location.LocationType</field>
            <operation>equals</operation>
            <value>Warehouse</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Onboarding Locations</relationshipLabel>
    <relationshipName>Onboarding_Locations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>