unpackaged/main/default/objects/Onboarding_Location__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <label>Location Name</label>
    <type>TextArea</type>
</CustomField>